libphx/include/Shader.h

PHX_API Shader*       Shader_Load           (cstr vertName, cstr fragName);
PHX_API void          Shader_Start          (Shader*);
PHX_API void          Shader_Stop           (Shader*);
PHX_API void          Shader_ResetTexIndex  ();
PHX_API void          Shader_SetFloat       (cstr, float);
PHX_API void          Shader_SetFloat3      (cstr, float, float, float);
PHX_API void          Shader_SetInt         (cstr, int);
PHX_API void          Shader_SetTex2D       (cstr, Tex2D*);
PHX_API void          Shader_SetTexCube     (cstr, TexCube*);