libphx/src/cpp/include/Tex2D.h

/* --- API NOTES ---------------------------------------------------------------
 *
 *   This type is REFERENCE-COUNTED. See ../doc/RefCounted.txt for details.
 *
 * -------------------------------------------------------------------------- */

PHX_API Tex2D*     Tex2D_Create         (int sx, int sy, TexFormat);
PHX_API void       Tex2D_Free           (Tex2D*);
PHX_API void       Tex2D_SetData        (Tex2D*, void const*, PixelFormat, DataFormat);